Jul 09 2003  2.9.1  Tweaked configure script to disable pcap and enable viha on
                     OSX installs.
Jul 05 2003  2.9.1  Added fatal condition if channel lists are empty
                    Tweaked packet.h to like newer and older gccs again
Jul 04 2003  2.9.1  Added caching of client IP data
Jul 03 2003  2.9.1  Totally revamped mac-masking code and manufacturer
                     matching code.
                    Added environment var KISMET_CONF to change the directory
                     kismet looks in for config and manuf files by default
Jun 22 2003  2.9.1  Added panels UI display of current channel
                    Added some other paths to kismet_monitor for binaries
                    Fixed prism2_avs capture source
                    Added decrypted network tag to display
                    Changed tcpclient.cc to use fixed field lists to make it
                     compatable with other versions of kismet_server
Jun 21 2003  2.9.1  Added tcpclient hooks for cardlist
Jun 20 2003  2.9.1  Added CARD protocol to report card info to client
                    Minor tweak to how children link to GPS
Jun 18 2003  2.9.1  Actually fixed GPS
                    Fixed packet/network delta calculations (Sushila)
Jun 17 2003  2.9.1  Hopefully fixed gps with new packet path
Jun 15 2003  2.9.1  Fixed to handle ENOBUF cleanly in IPC
                    Rolled in OSX/Viha support from Sushila :)
                    Updated docs to reflect Viha support
Jun 14 2003  2.9.1  Tweaked queuing order of fatal text messages in IPC
Jun 11 2003  2.9.1  I hate IPC.  Replaced entire stream-pipe IPC core with
                     unix dgram sockets and it works much better.
                    Added IPC command acks to throttle channel hopping if the
                     card can't support changing as quickly as requested.
Jun 10 2003  2.9.1  Yet more work on the IPC.  More issues resolved.