@@ -1,5 +1,6 @@
 Jul 09 2003  2.9.1  Tweaked configure script to disable pcap and enable viha on
                      OSX installs.
+                    Added line wrapping to alerts and status window
 Jul 05 2003  2.9.1  Added fatal condition if channel lists are empty
                     Tweaked packet.h to like newer and older gccs again
 Jul 04 2003  2.9.1  Added caching of client IP data
